objects/WT_Opportunity_Choice__mdt.object
<CustomObject>
    <description>referenced in edit opportunity flow. Needs to be updated when ever a pick list value on opportunity is changed.</description>
    <fields>
        <fullName>Value_Order__c</fullName>
        <label>Value Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Choice_Value__c</fullName>
        <label>Choice Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Field_Name__c</fullName>
        <description>denotes the field Name on opportunity object</description>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Choice</label>
    <pluralLabel>Opportunity Choices</pluralLabel>
</CustomObject>